deployment/local/ingress/default-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: default-ingress
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    
spec:
  ingressClassName: nginx
  rules:
  - host: api.taxi.com
    http:
      paths:
      - path: /communicate
        pathType: Prefix
        backend:
          service:
            name: communicate-service
            port:
              number: 7070
      - path: /usermgmt
        pathType: Prefix
        backend:
          service:
            name: usermgmt-service
            port:
              number: 9090
      - path: /authmgmt
        pathType: Prefix
        backend:
          service:
            name: authmgmt-service
            port:
              number: 8080
      - path: /booking
        pathType: Prefix
        backend:
          service:
            name: booking-service
            port:
              number: 6060
      - path: /address
        pathType: Prefix
        backend:
          service:
            name: address-service
            port:
              number: 5050
